[gd_scene load_steps=4 format=3 uid="uid://dbv1u10bgn16r"]

[ext_resource type="Script" path="res://Scripts/bullet.gd" id="1_q0f5q"]
[ext_resource type="Texture2D" uid="uid://bamhx8xq3cboj" path="res://Textures/bullet.png" id="1_yc8cj"]

[sub_resource type="CircleShape2D" id="CircleShape2D_irxdv"]
radius = 6.0

[node name="Area2D" type="Area2D"]
script = ExtResource("1_q0f5q")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_yc8cj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_irxdv")

[node name="LifeSpanTimer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="LifeSpanTimer" to="." method="_on_life_span_timer_timeout"]
